Fix more FindBugs errors